update manage user

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -596,6 +596,10 @@
     "confirm_block_text": "Are you sure you want to block this account?",
     "confirm_unblock_title": "Confirm Account Unblock",
     "confirm_unblock_text": "Are you sure you want to unblock this account?",
+    "block_success": "Success",
+    "block_fail": "Fail",
+    "unblock_success": "Unblock success",
+    "unblock_fail": "Fail to unblock this account",
     "required_name": "Please enter a name!",
     "required_email": "Please enter an email!",
     "required_phone": "Please enter a phone number!",
