--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -593,6 +593,10 @@
     "confirm_block_text": "Bạn có chắc chắn muốn chặn tài khoản này không?",
     "confirm_unblock_title": "Xác nhận gỡ chặn tài khoản",
     "confirm_unblock_text": "Bạn có chắc chắn muốn gỡ chặn tài khoản này không?",
+    "block_success": "Thành công",
+    "block_fail": "Thất bại",
+    "unblock_success": "Gỡ chặn tài khoản người dùng thành công",
+    "unblock_fail": "Gỡ chặn tài khoản người dùng thất bại",
     "required_name": "Vui lòng điền tên!",
     "required_email": "Vui lòng điền email!",
     "required_phone": "Vui lòng điền số điện thoại!",
