--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -51,6 +51,8 @@
   "invalid_dob": "Ngày sinh không thể lớn hơn ngày hiện tại.",
   "back": "Quay lại",
   "update_profile": "Cập Nhật Thông Tin",
+  "complete_profile": "Hoàn tất hồ sơ",
+  "fill_valid_information": "Vui lòng điền đầy đủ thông tin",
   "complete": "Hoàn tất",
   "birthday_required": "Vui lòng chọn ngày sinh.",
   "notifications": "Thông báo",
@@ -197,6 +199,7 @@
     "quantity_placeholder": "Số lượng...",
     "price_placeholder": "Giá bán...",
     "pickup_address": "Địa chỉ lấy hàng",
+    "enter_pickup_address": "Nhập địa chỉ...",
     "no_address": "Không có địa chỉ nào",
     "note_placeholder": "Ghi chú (tối đa 200 ký tự)",
     "total_price_label": "Tổng giá:",
@@ -417,7 +420,7 @@
     }
   },
   "purchaseRequest": {
-    "title": "Quản Lý Nguyên Liệu Cần Nhập",
+    "title": "Quản lý kế hoạch - Nguyên liệu cần nhập",
     "dashboard": {
       "title": "Dashboard",
       "description": "Thông tin phân tích quản lý nguyên liệu cần nhập"
@@ -436,7 +439,7 @@
     }
   },
   "supplierRequest": {
-    "title": "Quản Lý Yêu Cầu Nhà Cung Cấp",
+    "title": "Quản lý yêu cầu nhà cung cấp",
     "dashboard": {
       "title": "Dashboard",
       "description": "Thông tin toàn yêu cầu supplier"
@@ -598,6 +601,10 @@
     "confirm_block_text": "Bạn có chắc chắn muốn chặn tài khoản này không?",
     "confirm_unblock_title": "Xác nhận gỡ chặn tài khoản",
     "confirm_unblock_text": "Bạn có chắc chắn muốn gỡ chặn tài khoản này không?",
+    "block_success": "Thành công",
+    "block_fail": "Thất bại",
+    "unblock_success": "Gỡ chặn tài khoản người dùng thành công",
+    "unblock_fail": "Gỡ chặn tài khoản người dùng thất bại",
     "required_name": "Vui lòng điền tên!",
     "required_email": "Vui lòng điền email!",
     "required_phone": "Vui lòng điền số điện thoại!",
