--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -623,8 +623,8 @@
     "form": {
       "name": "Request Name",
       "name_placeholder": "Enter request name...",
-      "fuel_type": "Fuel Type",
-      "fuel_type_placeholder": "Select fuel type",
+      "fuel_type": "Material type",
+      "fuel_type_placeholder": "Select Material type",
       "no_data": "No data available",
       "image": "Image",
       "image_placeholder": "Upload your image",
@@ -652,7 +652,7 @@
     },
     "validation": {
       "empty_name": "Request name cannot be empty!",
-      "empty_fuel_type": "Fuel type is required!",
+      "empty_fuel_type": "Material type is required!",
       "empty_image": "Fuel image is required!",
       "empty_quantity": "Quantity is required!",
       "empty_price": "Price is required!",
@@ -676,8 +676,8 @@
     "form": {
       "name": "Order Name",
       "name_placeholder": "Enter order name...",
-      "fuel_type": "Fuel Type",
-      "fuel_type_placeholder": "Select fuel type",
+      "fuel_type": "Material type",
+      "fuel_type_placeholder": "Select Material type",
       "no_data": "No data available",
       "image": "Image",
       "upload": "Upload Image",
@@ -770,7 +770,7 @@
     "title": "Fuel Request Management",
     "table": {
       "customer": "Customer",
-      "fuel_type": "Fuel Type",
+      "fuel_type": "Material type",
       "request_name": "Request Name",
       "price": "Price",
       "status": "Status",
@@ -814,7 +814,7 @@
     "completeFailed": "Failed to complete order!",
     "errorCompleting": "An error occurred while completing the order!",
     "customer": "Customer",
-    "fuelType": "Fuel Type",
+    "fuelType": "Material type",
     "price": "Price (VND)",
     "status": "Status",
     "pending": "Pending",
@@ -883,7 +883,7 @@
     "close": "Close",
     "columns": {
       "customer": "Customer",
-      "fuelType": "Fuel Type",
+      "fuelType": "Material type",
       "totalPrice": "Total Price",
       "status": "Status",
       "action": "Action"
@@ -967,7 +967,7 @@
     "title": "Raw Material Batch Management",
     "batchId": "Batch ID",
     "batchName": "Batch Name",
-    "fuelType": "Fuel Type",
+    "fuelType": "Material type",
     "quantity": "Quantity (Kg)",
     "storage": "Storage",
     "status": "Status",
@@ -977,7 +977,7 @@
     "detailTitle": "Batch Detail",
     "estimatedProduction": "Estimated Production (Kg)",
     "requiredMaterialEstimate": "Estimated Required Material (Kg)",
-    "selectFuelType": "Select Fuel Type",
+    "selectFuelType": "Select Material type",
     "enterEstimatedProduction": "Enter estimated production",
     "selectStorage": "Select Storage",
     "createdAt": "Created At",
@@ -986,7 +986,7 @@
   "validation": {
     "requiredBatchId": "Please enter the batch ID",
     "requiredBatchName": "Please enter the batch name",
-    "requiredFuelType": "Please select a fuel type",
+    "requiredFuelType": "Please select a Material type",
     "requiredProduction": "Please enter the estimated production!",
     "requiredStorage": "Please select a storage",
     "requiredBatch": "Please select a batch",
@@ -1335,7 +1335,7 @@
   },
   "material_dashboard": {
     "title": "Fuel Management Dashboard",
-    "totalFuelTypes": "Total Fuel Types",
+    "totalFuelTypes": "Total Material types",
     "totalFuelQuantity": "Total Fuel Quantity",
     "quickOverview": "Quick Overview",
     "recentTransactions": "recent fuel transactions",
@@ -1347,7 +1347,7 @@
     "historyTitle": "Fuel Import/Export History",
     "noHistory": "No fuel import/export data",
     "warningTitle": "Low Fuel Warnings",
-    "fuelType": "Fuel Type",
+    "fuelType": "Material type",
     "quantity": "Quantity",
     "status": "Status",
     "date": "Date",
@@ -1358,22 +1358,127 @@
     "warningEmpty": "Out of fuel!"
   },
   "createFuel": {
-    "title": "Create New Fuel Type",
+    "title": "Create New Material type",
     "back": "Go Back",
-    "nameLabel": "Fuel Type Name",
-    "namePlaceholder": "Enter fuel type name",
-    "nameRequired": "Please enter the fuel type name",
+    "nameLabel": "Material type Name",
+    "namePlaceholder": "Enter Material type name",
+    "nameRequired": "Please enter the Material type name",
     "descLabel": "Description",
     "descPlaceholder": "Enter description (optional)",
     "imageLabel": "Fuel image (JPG, PNG < 2MB)",
     "imageRequired": "Please upload a fuel image",
     "chooseImage": "Select Image",
-    "submit": "Create Fuel Type",
+    "submit": "Create Material type",
     "imageTypeError": "Only JPG/PNG images are supported!",
     "imageSizeError": "Image must be smaller than 2MB!",
     "uploadError": "Failed to read image.",
-    "createSuccess": "Fuel type created successfully!",
+    "createSuccess": "Material type created successfully!",
     "createFail": "Fuel creation failed!",
-    "createError": "An error occurred while creating fuel type."
+    "createError": "An error occurred while creating Material type."
+  },
+  "fuelList": {
+    "title": "Material type List",
+    "back": "Go Back",
+    "search": "Search",
+    "searchPlaceholder": "Search",
+    "searchButton": "Search",
+    "resetButton": "Reset",
+    "closeButton": "Close",
+    "export_excel": "Export Excel",
+    "no_data_to_export": "No data to export!",
+    "create_success": "Update successful!",
+    "create_fail": "Update failed!",
+    "update_error": "Server connection error!",
+    "delete_success": "Fuel marked as deleted!",
+    "delete_fail": "Delete failed!",
+    "not_logged_in": "You are not logged in. Please log in again.",
+    "fetch_fail": "Failed to fetch Material types!",
+    "server_error": "Cannot connect to the server!",
+    "columns": {
+      "type_name": "Material type Name",
+      "description": "Description",
+      "quantity": "Stock Quantity",
+      "status": "Status",
+      "actions": "Actions"
+    },
+    "status": {
+      "deleted": "Deleted",
+      "active": "Active"
+    },
+    "drawer": {
+      "details_title": "Material type Details",
+      "update_title": "Update Material type",
+      "image": "Image",
+      "no_image": "No image available",
+      "no_data": "No data",
+      "no_description": "No description",
+      "delete_status": "Delete Status",
+      "storage": "Storage",
+      "created_at": "Created At",
+      "updated_at": "Last Updated",
+      "loading": "Loading data...",
+      "close": "Close",
+      "cancel": "Cancel",
+      "save": "Save"
+    },
+    "form": {
+      "placeholder_name": "Material type Name",
+      "placeholder_description": "Description",
+      "placeholder_quantity": "Quantity",
+      "empty_name": "Fuel name cannot be empty"
+    }
+  },
+  "boxList": {
+    "title": "Box Materials by Category",
+    "back": "Go Back",
+    "create": "+ Create New Material",
+    "image": "Image",
+    "no_image": "No Image",
+    "name": "Material Name",
+    "quantity": "Quantity",
+    "capacity": "Capacity",
+    "size": "Packaging Size",
+    "status": "Status",
+    "status_deleted": "Deleted",
+    "status_active": "Active",
+    "actions": "Actions",
+    "confirm_delete": "Confirm Deletion",
+    "confirm_delete_content": "Are you sure you want to delete this material?",
+    "delete_success": "Deleted successfully.",
+    "delete_fail": "Deletion failed.",
+    "delete_error": "Error deleting material.",
+    "category_error": "Failed to fetch box categories.",
+    "box_error": "Failed to fetch boxes.",
+    "details": {
+      "title": "Box Details",
+      "name": "Name",
+      "quantity": "Quantity",
+      "status": "Status",
+      "capacity": "Capacity",
+      "size": "Packaging Size",
+      "created": "Created At",
+      "updated": "Last Updated",
+      "close": "Close"
+    },
+    "update": {
+      "title": "Update Box",
+      "name": "Box Name",
+      "quantity": "Quantity",
+      "image_label": "New Image",
+      "preview": "This image will be updated",
+      "cancel": "Cancel",
+      "submit": "Update",
+      "validate_name": "Please enter box name",
+      "validate_quantity": "Please enter quantity",
+      "update_success": "Updated successfully!",
+      "update_fail": "Update failed!",
+      "update_error": "Error updating box."
+    },
+    "sizes": {
+      "small": "Size S",
+      "medium": "Size M",
+      "large": "Size L",
+      "unknown": "Unknown"
+    }
   }
 }
