Add Search, Filter, Sort for Material Storage Export List

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1377,7 +1377,7 @@
     "createError": "An error occurred while creating Material type."
   },
   "fuelList": {
-    "title": "Material type List",
+    "title": "Material Type List",
     "back": "Go Back",
     "search": "Search",
     "searchPlaceholder": "Search",
