--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -558,7 +558,8 @@
     "role": "Vai trò",
     "action": "Chức năng",
     "detail": "Chi tiết",
-    "update_title": "Chi Tiết Tài Khoản",
+    "update_title": "Cập Nhật Tài Khoản",
+    "detail_title": "Chi Tiết Tài Khoản",
     "update": "Cập nhật",
     "created_at": "Ngày tạo",
     "updated_at": "Cập nhật gần nhất",
@@ -1539,5 +1540,14 @@
     "success": "Tạo loại thùng thành công!",
     "fail": "Tạo thất bại!",
     "error": "Lỗi kết nối đến server!"
+  },
+  "button": {
+    "cancel": "Hủy",
+    "reject": "Từ chối",
+    "update": "Cập nhật",
+    "approve": "Chấp nhận",
+    "close": "Đóng",
+    "approve_order": "Duyệt đơn",
+    "cancel_order": "Hủy đơn"
   }
 }
