update functions notifications with request from supplier

--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -626,8 +626,8 @@
       "price": "Giá trên mỗi Kg / Đơn vị (VND)",
       "price_placeholder": "Nhập giá...",
       "start_date_placeholder": "Chọn ngày bắt đầu nhận đơn",
-      "end_date_placeholder": "Chọn ngày kết thúc nhận đơn",
-      "due_date_placeholder": "Chọn hạn chót hoàn thành đơn",
+      "end_date_placeholder": "Chọn ngày kết thúc",
+      "due_date_placeholder": "Chọn hạn chót hoàn thành",
       "priority": "Mức độ ưu tiên",
       "priority_placeholder": "Chọn mức độ ưu tiên",
       "note": "Ghi chú",
