--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -137,7 +137,7 @@
   },
   "feature_buttons": {
     "order_management": "ORDER MANAGEMENT",
-    "harvest_request": "HARVEST REQUEST",
+    "harvest_request": "Material collection request",
     "provide_material": "SUPPLY MATERIALS"
   },
   "footer": {
@@ -155,10 +155,10 @@
     "created_orders": "Created Orders",
     "harvest_orders": "Harvest Orders",
     "provide_orders": "Provide Orders",
-    "create_harvest_request": "Create Harvest Request",
+    "create_harvest_request": "Create Material collection request",
     "create_provide_order": "Create Provide Order",
     "order_history": "Order History",
-    "history_harvest": "Harvest Request History",
+    "history_harvest": "Material collection request History",
     "history_provide": "Provide Order History",
     "track_shipment": "Track Shipment",
     "adminTitle": "ADMIN",
@@ -169,9 +169,9 @@
     "footer": "minhduc.lmd Dev"
   },
   "harvestRequest": {
-    "title": "HARVEST REQUEST FORM",
-    "edit_title": "Edit Harvest Request",
-    "detail_title": "Harvest Request Details",
+    "title": "Material collection request FORM",
+    "edit_title": "Edit Material collection request",
+    "detail_title": "Material collection request Details",
     "name": "Request Name",
     "quantity": "Quantity (kg)",
     "price": "Price per Unit (VND)",
@@ -194,7 +194,7 @@
     "no_data": "No data available.",
     "delete": "Delete",
     "detail": "Detail",
-    "create_request_title": "Create Harvest Request",
+    "create_request_title": "Create Material collection request",
     "request_name": "Request Name",
     "request_name_placeholder": "Enter request name...",
     "material_type": "Material Type",
@@ -214,7 +214,7 @@
     "empty_quantity": "Quantity is required!",
     "empty_price": "Price is required!",
     "empty_address": "Address is required!",
-    "create_success": "Harvest request created successfully!",
+    "create_success": "Material collection request created successfully!",
     "create_fail": "Failed to create request! Please try again.",
     "invalid_address": "Address must not contain special characters!"
   },
@@ -263,8 +263,8 @@
     "see_more": "See More"
   },
   "provideRequest": {
-    "title": "SUPPLY REQUEST",
-    "editTitle": "Update Supply Request",
+    "title": "PROVIDE REQUEST",
+    "editTitle": "Update Provide Request",
     "confirmDelete": "Delete Request",
     "deleteConfirmMessage": "Are you sure you want to delete this request?",
     "delete_success": "Request has been deleted!",
@@ -282,11 +282,11 @@
     "enter_quantity": "Quantity to supply",
     "enter_quantity_required": "Please enter quantity!",
     "actions": "Actions",
-    "detail_title": "Supply Request Details",
+    "detail_title": "Provide Request Details",
     "updated_at": "Updated At",
     "exceed_quantity": "Quantity must not exceed {{quantity}}!",
     "must_divisible_by_10": "Quantity must be divisible by 10!",
-    "create_title": "Create Supply Request",
+    "create_title": "Create Provide Request",
     "remaining_quantity": "Remaining quantity:",
     "request_price": "Unit price:",
     "time_left": "Time left:",
@@ -299,8 +299,8 @@
     "send_request": "Send Request",
     "no_data": "None",
     "select_order_warning": "Please select an order!",
-    "success_create": "Supply request created successfully!",
-    "failed_create": "Failed to create supply request!",
+    "success_create": "Provide Request created successfully!",
+    "failed_create": "Failed to create Provide Request!",
     "note_length_error": "Note must not exceed 2000 characters!",
     "delivery_address": "Delivery Address",
     "selected_order_info": "Selected Order Information",
@@ -322,7 +322,7 @@
     "noData": "No data available."
   },
   "historyHarvestRequestOrder": {
-    "title": "HARVEST REQUEST HISTORY",
+    "title": "Material collection request HISTORY",
     "loading": "Loading data...",
     "itemName": "Request Name",
     "quantity": "Quantity",
@@ -330,7 +330,7 @@
     "totalPrice": "Total Price",
     "status": "Status",
     "actions": "Actions",
-    "viewDetail": "View Harvest Request Details",
+    "viewDetail": "View Material collection request Details",
     "note": "Note",
     "close": "Close",
     "noData": "No data available.",
@@ -452,7 +452,7 @@
       "description": "Manage requests to collect raw materials"
     },
     "provideList": {
-      "title": "Material Supply Requests",
+      "title": "Material Provide Requests",
       "description": "Manage requests to supply raw materials"
     },
     "receipt": {
@@ -620,7 +620,7 @@
   },
   "harvest": {
     "back": "Go Back",
-    "title": "Material Supply Request",
+    "title": "Material Provide Request",
     "form": {
       "name": "Request Name",
       "name_placeholder": "Enter request name...",
@@ -740,7 +740,7 @@
     "pending_orders": "Pending Orders",
     "approved_orders": "Approved Orders",
     "request_title": "📥 Fuel Collection Requests",
-    "supply_title": "📦 Fuel Supply Requests",
+    "supply_title": "📦 Fuel Provide Requests",
     "total": "Total Requests",
     "status_chart_title": "Order Status Chart",
     "recent_orders": "Recent Orders",
