--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -65,6 +65,29 @@
   "account": "Account",
   "export_excel": "Export Excel",
   "create_process": "Create process",
+  "userProfile": "User Profile",
+  "continueShopping": "Continue Shopping",
+  "saveInfo": "Save Information",
+  "addressList": "Address List",
+  "changePassword": "Change Password",
+  "name": "Name",
+  "email": "Email",
+  "phone": "Phone Number",
+  "birthDate": "Birth Date",
+  "avatar": "Avatar",
+  "confirmEmail": "Confirm Email",
+  "pleaseEnterEmail": "Please enter your email",
+  "enterEmail": "Enter email...",
+  "sendRequest": "Send Request",
+  "enterOtp": "Enter OTP",
+  "otpInstruction": "Please enter the 6-digit OTP sent to your email",
+  "confirmOtp": "Confirm OTP",
+  "notReceiveOtp": "Didn't receive the code?",
+  "resendNow": "Resend",
+  "resendIn": "Resend in {{seconds}} seconds",
+  "enterOldPassword": "Please enter your current password",
+  "enterNewPassword": "Please enter your new password",
+  "confirmNewPassword": "Please confirm your new password",
   "carousel": {
     "view_more": "View more",
     "title_2": "CAREFUL SELECTION",
