--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -62,6 +62,29 @@
   "account": "Tài khoản",
   "export_excel": "Xuất Excel",
   "create_process": "Tạo quy trình",
+  "userProfile": "Hồ sơ người dùng",
+  "continueShopping": "Tiếp tục mua hàng",
+  "saveInfo": "Lưu thông tin",
+  "addressList": "Danh sách địa chỉ",
+  "changePassword": "Đổi mật khẩu",
+  "name": "Tên",
+  "email": "Email",
+  "phone": "Số điện thoại",
+  "birthDate": "Ngày sinh",
+  "avatar": "Ảnh đại diện",
+  "confirmEmail": "Xác nhận email",
+  "pleaseEnterEmail": "Vui lòng nhập email của bạn",
+  "enterEmail": "Nhập email...",
+  "sendRequest": "Gửi yêu cầu",
+  "enterOtp": "Nhập mã OTP",
+  "otpInstruction": "Vui lòng nhập mã OTP gồm 6 chữ số được gửi đến email của bạn",
+  "confirmOtp": "Xác nhận OTP",
+  "notReceiveOtp": "Không nhận được mã?",
+  "resendNow": "Gửi lại",
+  "resendIn": "Gửi lại sau {{seconds}} giây",
+  "enterOldPassword": "Vui lòng nhập mật khẩu cũ của bạn",
+  "enterNewPassword": "Vui lòng nhập mật khẩu mới của bạn",
+  "confirmNewPassword": "Vui lòng nhập lại mật khẩu mới của bạn",
   "carousel": {
     "view_more": "Xem thêm",
     "title_2": "TUYỂN CHỌN KỸ CÀNG",
