edit ui for detail forms

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1552,6 +1552,7 @@
     "approve": "Approve",
     "close": "Close",
     "approve_order": "Approve Order",
-    "cancel_order": "Reject Order"
+    "cancel_order": "Reject Order",
+    "create_process": "Create Process"
   }
 }
