--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1548,6 +1548,7 @@
     "approve": "Chấp nhận",
     "close": "Đóng",
     "approve_order": "Duyệt đơn",
-    "cancel_order": "Hủy đơn"
+    "cancel_order": "Hủy đơn",
+    "create_process": "Tạo quy trình"
   }
 }
