--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1576,5 +1576,49 @@
     "close": "Close",
     "approve_order": "Approve Order",
     "cancel_order": "Reject Order"
+  },
+  "boxMaterial": {
+    "back": "Back",
+    "title": "Create New Material",
+    "packageMaterialName": "Material Name",
+    "type": "Material Type",
+    "selectType": "Please select material type",
+    "selectCategory": "Please select package category",
+    "selectImage": "Please upload an image",
+    "quantity": "Quantity",
+    "length": "Length (cm)",
+    "width": "Width (cm)",
+    "height": "Height (cm)",
+    "capacity": "Capacity (Bag: g, Box: kg)",
+    "image": "Material Image",
+    "create": "Create Material",
+    "systemClassification": "👉 System Classification:",
+    "suggestedCapacity": "👉 Suggested capacity for size {{size}}: about {{capacity}} {{unit}}",
+    "sizeReferenceTable": "📏 Size Reference Table",
+    "vacuumBag": "🛍️ Vacuum Bag:",
+    "cartonBox": "📦 Carton Box:",
+    "size": "Size",
+    "dimensions": "Dimensions (cm)",
+    "suggestedCapacityColumn": "Suggested Capacity",
+    "small": "small",
+    "medium": "medium",
+    "large": "large",
+    "unknown": "unknown",
+    "errorLoadingCategories": "Failed to load box categories",
+    "createSuccess": "Material created successfully!",
+    "createFailed": "Failed to create material",
+    "serverError": "Server connection error",
+    "capacityExceeded": "Capacity {{capacity}}{{unit}} exceeds allowed for size {{size}} ({{limit}}{{unit}})",
+    "invalidCapacityLimit": "Cannot determine capacity limit.",
+    "enterLength": "Enter length",
+    "enterWidth": "Enter width",
+    "enterHeight": "Enter height",
+    "enterName": "Please enter material name",
+    "enterQuantity": "Please enter quantity",
+    "enterCapacity": "Please enter capacity",
+    "heightPlaceholder": "Only for carton box",
+    "selectImageButton": "Choose image",
+    "vacuumBagLabel": "Vacuum Bag",
+    "cartonBoxLabel": "Carton Box"
   }
 }
