--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1572,5 +1572,49 @@
     "close": "Đóng",
     "approve_order": "Duyệt đơn",
     "cancel_order": "Hủy đơn"
+  },
+  "boxMaterial": {
+    "back": "Quay lại",
+    "title": "Tạo Nguyên Liệu Mới",
+    "packageMaterialName": "Tên Nguyên liệu",
+    "type": "Loại Nguyên Liệu",
+    "selectType": "Vui lòng chọn loại nguyên liệu",
+    "selectCategory": "Vui lòng chọn loại bao bì",
+    "selectImage": "Vui lòng chọn ảnh",
+    "quantity": "Số lượng",
+    "length": "Dài (cm)",
+    "width": "Rộng (cm)",
+    "height": "Cao (cm)",
+    "capacity": "Dung Tích (Túi: g, Thùng: kg)",
+    "image": "Ảnh Nguyên Liệu",
+    "create": "Tạo Nguyên Liệu",
+    "systemClassification": "👉 Phân loại hệ thống:",
+    "suggestedCapacity": "👉 Gợi ý dung tích cho size {{size}}: khoảng {{capacity}} {{unit}}",
+    "sizeReferenceTable": "📏 Bảng Size Tham Khảo",
+    "vacuumBag": "🛍️ Túi chân không:",
+    "cartonBox": "📦 Thùng carton:",
+    "size": "Size",
+    "dimensions": "Kích thước (cm)",
+    "suggestedCapacityColumn": "Dung tích gợi ý",
+    "small": "nhỏ",
+    "medium": "trung bình",
+    "large": "lớn",
+    "unknown": "chưa xác định",
+    "errorLoadingCategories": "Lỗi khi tải danh sách loại thùng",
+    "createSuccess": "Tạo nguyên vật liệu thành công!",
+    "createFailed": "Tạo nguyên vật liệu thất bại",
+    "serverError": "Lỗi kết nối server",
+    "capacityExceeded": "Dung tích {{capacity}}{{unit}} vượt quá mức cho phép với size {{size}} ({{limit}}{{unit}})",
+    "invalidCapacityLimit": "Không xác định được giới hạn capacity.",
+    "enterLength": "Nhập chiều dài",
+    "enterWidth": "Nhập chiều rộng",
+    "enterHeight": "Nhập chiều cao",
+    "enterName": "Vui lòng nhập tên nguyên liệu",
+    "enterQuantity": "Vui lòng nhập số lượng",
+    "enterCapacity": "Vui lòng nhập dung tích",
+    "heightPlaceholder": "Chỉ áp dụng cho thùng",
+    "selectImageButton": "Chọn ảnh",
+    "vacuumBagLabel": "Túi chân không",
+    "cartonBoxLabel": "Thùng carton"
   }
 }
